# badml

./: .clang-tidy  .gitignore  Makefile.am  Makefile.in  README  compile_commands.json  config.h.in  config.status  configure  configure.ac
.github/workflows/: makefile.yml
src/: Makefile.am  Makefile.in  alloc.c  alloc.h  block.c  block.h  bml_alloc.c  bml_alloc.h  bml_error.c  bml_error.h  bml_matrix.h  bml_vector.h  bml_vector_access.c  bml_vector_create.c  bml_vector_destroy.c  bml_vector_initialize.c  bml_vector_int.h  bml_vector_io.c  bml_vector_math.c  bml_vector_util.c  error.c  error.h  vector.h  vector_access.c  vector_create.c  vector_destroy.c  vector_io.c  vector_math.c  vector_util.c
src/matrix/: access.c  create.c  matrix.h
src/vector/: access.c  create.c  destroy.c  init.c  io.c  math.c  vector.h
tests/: Makefile.am  Makefile.in  check_error.c  check_vector.c
